[tool.poetry]
name = "up"
version = "0.1.0"
description = "Device checker"
authors = ["chris clark"]
license = "open"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^1.19.0"
dash-admin = "^0.1.15"
dash-extensions = "^0.0.47"
dash-bootstrap-components = "^0.12.0"
dash-design-kit = "^0.0.1"
pandas = "^1.2.3"
loguru = "^0.5.3"
arpreq = "^0.3.3"
icmplib = "^2.1.1"
black = "^20.8b1"
requests = "^2.25.1"
spyder-kernels = "^2.0.1"
SQLAlchemy = "^1.4.14"
sqlathanor = "^0.7.0"
tomlkit = "^0.7.0"
sqlacodegen = "^2.3.0"
pynag = "^1.1.2"
toml-config = "^0.1.3"
toml = "^0.10.2"
dnspython = "^2.1.0"
psutil = "^5.8.0"
structlog = "^21.1.0"
coloredlogs = "^15.0"
ansicolors = "^1.1.8"
mypy = "^0.812"
yapf = "^0.31.0"
spyder = "^5.0.4"

[tool.poetry.dev-dependencies]
spyder = "^5.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

