[tool.poetry]
name = "networkmonitor"
version = "0.1.0"
description = "Monitor network hosts"
authors = ["Chris P Clark"]
license = "gpl"

[tool.poetry.dependencies]
python = "^3.10"
dash = "2.1.0"
dash-admin = "^0.1.15"
dash-extensions = "^0.0.47"
dash-bootstrap-components = "^0.12.0"
dash-design-kit = "^0.0.1"
pandas = "^1.2.3"
arpreq = "^0.3.3"
icmplib = "^2.1.1"
requests = "^2.25.1"
sqlathanor = "^0.7.0"
tomlkit = "^0.7.0"
sqlacodegen = "^2.3.0"
pynag = "^1.1.2"
toml-config = "^0.1.3"
toml = "^0.10.2"
dnspython = "^2.1.0"
psutil = "^5.8.0"
structlog = "^21.1.0"
coloredlogs = "^15.0"
ansicolors = "^1.1.8"
mypy = "^0.812"
yapf = "^0.31.0"
flask-loguru = "^1.0.0"
dash-react-table = "^0.0.3"
sip = "^6.1.1"
pylint = "^2.9.3"
sqlmodel = "^0.0.4"
plyer = "^2.0.0"
dbus-python = "^1.2.18"
celery = "^5.2.2"
redis = "^4.1.0"
flower = "^1.0.0"
python-nmap = "^0.7.1"
waitress = "^2.0.0"
hupper = "^1.10.3"
scalene = "^1.3.16"
blue = "^0.7.0"
python3-nmap = "^1.5.1"
dash-labs = "1.0.2"
ssort = "^0.10.2"
crashtest = "^0.3.1"
notify2 = "^0.3.1"
memory-profiler = "^0.60.0"
httpx = "^0.22.0"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
